# nexus_flow

./: .gitignore  pyproject.toml  runpod_setup.md
.agents/workflows/: commit.md
backend/: Cargo.toml  build.rs
backend/src/: config.rs  graph.rs  grpc_client.rs  main.rs  messages.rs  models.rs  supabase.rs  ws.rs
engine/: Dockerfile  main.py  model_loader.py  nexus_simulation_pb2.py  nexus_simulation_pb2_grpc.py  prompt_template.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CustomNodes.tsx  Sidebar.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/pages/: Home.tsx  Studio.tsx
proto/: nexus_simulation.proto
schema/: example_topology.json  nexus_flow_schema.json
src/nexus_flow/: __init__.py
supabase/migrations/: 00001_initial_schema.sql
