[package]
name = "nexus-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization (JSON SSOT 처리)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment Variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"
