[package]
name = "nexus-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization (JSON SSOT 처리)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment Variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"

# WebSocket
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

# Supabase (PostgREST)
postgrest = "1.6"
reqwest = { version = "0.12", features = ["json"] }


[build-dependencies]
tonic-build = "0.12"


